# pre-commit-hooks-blog

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  fake_gem__.gemspec  package.json  pyproject.toml
.github/workflows/: pre-commit.yml
pre_commit_hooks_blog/: auto_commit_message.py  check_orphan_tags.py  check_placeholders.py  fix_bear_export_quirks.py  fix_text_wrap.py  run_markdownlint.py  run_mlc.py  util.py
tests/: conftest.py  test_all_integration.py  test_auto_commit_message.py  test_check_orphan_tags.py  test_check_placeholders.py  test_fix_bear_export_quirks.py  test_pre_commit_hooks_blog.py  test_util.py
tests/data/: bad.md  good.md
