[tool.poetry]
name = "pre_commit_hooks_blog"
version = "0.1.0"
description = "Cade's Razmatazz Static Blog Pre-commit Hooks"
authors = ["Cade Ekblad-Frank <cade@e-f.me>"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
